k8s/config-server.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: config-server
  namespace: microservices
spec:
  replicas: 1
  selector:
    matchLabels:
      app: config-server
  template:
    metadata:
      labels:
        app: config-server
    spec:
      containers:
        - name: config-server
          image: <DOCKER_USER>/config-server:latest
          ports:
            - containerPort: 8085
---
apiVersion: v1
kind: Service
metadata:
  name: config-server
  namespace: microservices
spec:
  selector:
    app: config-server
  ports:
    - port: 8085
  type: ClusterIP
