k8s/hotel-service.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hotel-service
  namespace: microservices
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hotel-service
  template:
    metadata:
      labels:
        app: hotel-service
    spec:
      containers:
        - name: hotel-service
          image: hotel-service:latest
          ports:
            - containerPort: 8082
---
apiVersion: v1
kind: Service
metadata:
  name: hotel-service
  namespace: microservices
spec:
  selector:
    app: hotel-service
  ports:
    - port: 8082
  type: ClusterIP
