k8s/mysql-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysql-db
  namespace: microservices
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mysql-db
  template:
    metadata:
      labels:
        app: mysql-db
    spec:
      containers:
        - name: mysql-db
          image: <DOCKER_USER>/mysql:8.0
          ports:
            - containerPort: 3306
          volumeMounts:
            - name: mysql-storage
              mountPath: /var/lib/mysql
      volumes:
        - name: mysql-storage
          persistentVolumeClaim:
            claimName: mysql-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: mysql-db
  namespace: microservices
spec:
  selector:
    app: mysql-db
  ports:
    - port: 3306
  type: ClusterIP
