k8s/rating-service.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rating-service
  namespace: microservices
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rating-service
  template:
    metadata:
      labels:
        app: rating-service
    spec:
      containers:
        - name: rating-service
          image: <DOCKER_USER>/rating-service:latest
          ports:
            - containerPort: 8083
---
apiVersion: v1
kind: Service
metadata:
  name: rating-service
  namespace: microservices
spec:
  selector:
    app: rating-service
  ports:
    - port: 8083
  type: ClusterIP
