k8s/service-registry.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: service-registry
  namespace: microservices
spec:
  replicas: 1
  selector:
    matchLabels:
      app: service-registry
  template:
    metadata:
      labels:
        app: service-registry
    spec:
      containers:
        - name: service-registry
          image: service-registry:latest
          ports:
            - containerPort: 8761
---
apiVersion: v1
kind: Service
metadata:
  name: service-registry
  namespace: microservices
spec:
  selector:
    app: service-registry
  ports:
    - port: 8761
  type: ClusterIP
